--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "http-server": "^14.1.1",
+    "link": "^2.1.0",
     "readline-sync": "^1.4.10"
   },
   "name": "@hexlet/code",
@@ -14,12 +15,12 @@
   "license": "ISC",
   "description": "[![Actions Status](https://github.com/THVwww/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/THVwww/frontend-project-44/actions)",
   "bin": {
-   "code": "bin/brain-games.js",
-   "brain-games": "bin/brain-games.js",
-   "brain-even": "bin/brain-even.js",
-   "brain-calc": "bin/brain-calc.js",
-   "brain-gcd": "bin/brain-gcd.js",
-   "brain-progression": "bin/brain-progression.js",
-   "brain-prime": "bin/brain-prime.js"
-   }
+    "code": "bin/brain-games.js",
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
+  }
 }
